--- a/src/main/resources/RunningPlanBuilder_en.properties
+++ b/src/main/resources/RunningPlanBuilder_en.properties
@@ -1,4 +1,5 @@
-# RunningPlanBuilder.properties
+# RunningPlanBuilder_en.properties
+# english
 # program infos
 app.name=RunningPlanBuilder
 app.version=v.0.1
@@ -105,7 +106,9 @@ runningUnitView.durationLabelText=Duration (min):
 # preferences view
 preferencesView.title=Settings
 preferencesView.debugModeCheckBoxLabel.text=Record errors:
+preferencesView.localizationComboBoxInfoLabel.text=The language will be changed after restarting the app.
 preferencesView.localizationComboBoxLabel.text=Language:
+preferencesView.debugModeCheckBoxInfoLabel.text=The debug mode will be activated after restarting the app.
 preferencesView.useLastImportDirCheckBoxLabel.text=Remember last folder:
 
 # different strings
