--- a/src/main/resources/RunningPlanBuilder_de.properties
+++ b/src/main/resources/RunningPlanBuilder_de.properties
@@ -2,21 +2,26 @@
 # german
 # program infos
 app.name=RunningPlanBuilder
-app.version=v.0.1
-
-# about dialog from main view
-about.alert.header=Ein einfaches Werkzeug, um Laufpläne zu bearbeiten oder zu erstellen,\n\
-  welche in der App "Laufplan" genutzt werden können.\n\
-  Diese Software ist Open Source und kann ohne Einschränkungen genutzt werden.
-about.alert.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
-about.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder
+app.version=v0.1
 
 # debug dialog from main view
-debug.alert.header=Keine Software ist fehlerfrei, natürlich auch nicht diese.\n\
+alert.debug.header=Keine Software ist fehlerfrei, natürlich auch nicht diese.\n\
   Bitte teilen Sie mir Fehler und auch Wünsche direkt bei GitHub mit.\n\
   Gern können Sie auch Programm-Code beisteuern.
-debug.alert.info=Fehler und Wünsche melden
-debug.alert.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
+alert.debug.info=Fehler und Wünsche melden
+alert.debug.info.url=https://github.com/hiroladev/RunningPlanBuilder/issues
+
+# licenses dialog from main view
+alert.licenses.header=Diese App nutzt verschiedene Bibliotheken und Software Dritter.
+alert.licenses.info=Weitere Informationen zu den genutzten Bibliotheken.
+alert.licenses.info.url=https://github.com/hiroladev/RunningPlanBuilder/wiki/Licences
+
+# about dialog from main view
+alert.about.header=Ein einfaches Werkzeug, um Laufpläne zu bearbeiten oder zu erstellen,\n\
+  welche in der App "Laufplan" genutzt werden können.\n\
+  Diese Software ist Open Source und kann ohne Einschränkungen genutzt werden.
+alert.about.info=Copyright by Michael Schmidt - Hirola Consulting - 2022
+alert.about.info.url=https://github.com/hiroladev/RunningPlanBuilder
 
 # alert dialog
 alert.template.emptyName=Es muss mindestens der Name angegeben werden.
@@ -63,6 +68,7 @@ mainMenuBar.menuEdit.menuItemPreferences=Einstellungen
 # help menu
 mainMenuBar.menuHelp=Hilfe
 mainMenuBar.menuHelp.menuItemDebug=Fehler
+mainMenuBar.menuHelp.menuItemLicenses=Lizenzen
 mainMenuBar.menuHelp.menuItemAbout=Über
 
 # main tool "menu"
@@ -109,6 +115,7 @@ preferencesView.debugModeCheckBoxLabel.text=Fehler aufzeichnen:
 preferencesView.debugModeCheckBoxInfoLabel.text=Fehler werden nach dem Neustart der App aufgezeichnet.
 preferencesView.localizationComboBoxLabel.text=Sprache:
 preferencesView.localizationComboBoxInfoLabel.text=Die Sprache wird nach dem Neustart der App geändert.
+preferencesView.useLastWindowSizeCheckBoxLabel.text=Letzte Fenstergröße verwenden:
 preferencesView.useLastImportDirCheckBoxLabel.text=Letzten Ordner merken:
 
 # different strings
