import and view running plan from iCAL

--- a/src/main/resources/RunningPlanBuilder_de.properties
+++ b/src/main/resources/RunningPlanBuilder_de.properties
@@ -54,11 +54,16 @@ friday=Freitag
 saturday=Sonnabend
 sunday=Sonntag
 
+# default values
+movementType.name.default=Unbekannt
+runningplanentry.remarks.default=Keine Anmerkungen vorhanden
+
 # main app menu
 # file menu
 mainMenuBar.menuFile=Datei
 mainMenuBar.menuFile.menuItemNew=Neu
-mainMenuBar.menuFile.menuItemOpen=Öffnen
+mainMenuBar.menuFile.menuItemImportJSON=Importiere JSON
+mainMenuBar.menuFile.menuItemImportICAL=Importiere iCAL
 mainMenuBar.menuFile.menuItemSave=Speichern
 mainMenuBar.menuFile.menuItemQuit=Beenden
 # edit menu
@@ -78,10 +83,12 @@ mainToolMenu.info=Fügen Sie weitere Elemente durch Klick auf das entsprechende E
 
 # main view
 mainView.table.defaultLabelText=Keine Einträge vorhanden
-mainView.table.column.1.headerText=Woche
-mainView.table.column.2.headerText=Tag
-mainView.table.column.3.headerText=Dauer
-mainView.table.column.4.headerText=Laufeinheiten
+mainView.table.column.week.headerText=Woche
+mainView.table.column.day.headerText=Tag
+mainView.table.column.duration.headerText=Dauer
+mainView.table.column.distance.headerText=Strecke
+mainView.table.column.remarks.headerText=Anmerkungen
+mainView.table.column.entries.headerText=Laufeinheiten
 
 # template view
 templateView.title=Laufplan bearbeiten
