import and view running plan from iCAL

--- a/src/main/resources/RunningPlanBuilder_de.properties
+++ b/src/main/resources/RunningPlanBuilder_de.properties
@@ -105,9 +105,10 @@ entryNodeView.weekLabelText=in der Woche:
 entryNodeView.runningUnitsLabelText=Laufeinheiten
 entryNodeView.addRunningUnitButtonText=Hinzufügen
 entryNodeView.table.defaultLabelText=Keine Laufeinheiten vorhanden
-entryNodeView.table.column.1.headerText=Dauer
-entryNodeView.table.column.2.headerText=Bewegungsart (Kürzel)
-entryNodeView.table.column.3.headerText=Bewegungsart
+entryNodeView.table.column.duration.headerText=Dauer
+entryNodeView.table.column.movementType.key.headerText=Kürzel
+entryNodeView.table.column.movementType.name.headerText=Bewegungsart
+entryNodeView.table.column.movementType.runningInfos.headerText=Lauf-Infos
 
 # running unit view
 runningUnitView.title=Laufeinheit bearbeiten
